# predicterm

./: .gitignore  Cargo.toml  Dockerfile.api  README.md  docker-compose.yml  predicterm-spec.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs
crates/api/src/routes/: calibration.rs  categories.rs  cohorts.rs  health.rs  maker_taker.rs  markets.rs  mod.rs  summary.rs  temporal.rs  yes_no.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  lib.rs  models.rs
crates/core/src/analytics/: calibration.rs  categories.rs  cohorts.rs  maker_taker.rs  mod.rs  summary.rs  temporal.rs  yes_no.rs
crates/etl/: Cargo.toml
crates/etl/src/: main.rs
scripts/: benchmark-api.sh
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/calibration/: page.tsx
web/app/categories/: page.tsx
web/app/cohorts/: page.tsx
web/app/maker-taker/: page.tsx
web/app/markets/: page.tsx
web/app/temporal/: page.tsx
web/app/yes-no/: page.tsx
web/components/: CalibrationChart.tsx  MakerTakerChart.tsx  StatsCard.tsx  TemporalChart.tsx
web/lib/: api.ts  providers.tsx
