[workspace]
members = ["crates/core", "crates/etl", "crates/api"]
resolver = "2"

[workspace.dependencies]
duckdb = { version = "1.10501", features = ["bundled", "parquet"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
