[package]
name = "predicterm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
